src/skills/languages/Languages.module.scss
@import "../../../themes/breakpoints";
@import "../../../themes/colors.module.scss";

.container {
	@include breakpoint(medium) {
		margin: 0 32px 0 48px;
	}
}

.sectionTitle {
	display: flex;
	justify-content: center;
	margin-top: 16px;
}

.content {
	margin: 0 0 56px 48px;

	@include breakpoint(small) {
		margin: 0 0 0 20px;
		display: flex;
		justify-content: center;
	}

	@include breakpoint(medium) {
		margin-left: 96px;
	}
}

.columnContainer {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	flex-wrap: wrap;
	max-width: 200px;

	@include breakpoint(medium) {
		flex-direction: row;
		flex-wrap: nowrap;
		max-width: unset;
	}
}

.expandableSection {
	display: none;
	width: 100%;
	height: 50px;
	justify-content: center;

	@include breakpoint(small) {
		display: flex;
	}
}

.expandButton {
	display: none;
	width: 100%;

	@include breakpoint(medium) {
		display: flex;
	}
}

